force-app/main/default/objects/Microsoft_Solutions__c/Microsoft_Solutions__c.object-meta.xml
<CustomObject>
    <description>Co-sell ready Microsoft solutions to create and synchronize referrals with Microsoft Partner Center</description>
    <label>Microsoft Solutions</label>
    <nameField>
        <displayFormat>{MM}{DD}{YY}-{0}</displayFormat>
        <label>Solution Line Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Microsoft Solutions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>