force-app/main/default/objects/Microsoft_Solutions__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>Opportunity associated with the Microsoft solution</description>
    <inlineHelpText>Opportunity associated with the Microsoft solution</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Microsoft Solutions</relationshipLabel>
    <relationshipName>Opportunity_To_Microsoft_Solutions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>