force-app/main/default/objects/Microsoft_Solutions__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>Price of solution</description>
    <inlineHelpText>Price of the solution associated with the opportunity</inlineHelpText>
    <label>Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>