force-app/main/default/objects/Microsoft_Solutions__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Quantity of solution</description>
    <inlineHelpText>Number of units of the solution associated with the opportunity</inlineHelpText>
    <label>Quantity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>