force-app/main/default/objects/Microsoft_Solutions__c/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Microsoft solution details</description>
    <inlineHelpText>Microsoft solution associated with the opportunity</inlineHelpText>
    <label>Solution</label>
    <referenceTo>Microsoft_Solution_Detail__c</referenceTo>
    <relationshipLabel>Microsoft Solutions</relationshipLabel>
    <relationshipName>Microsoft_Solutions_To_Details</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>